lang 영역 모던화: 익명 클래스→람다, Optional, 패턴 매칭 switch 등
- A분류 14개(Autoboxing/NullType/StaticMethodCallDemo/ReturnOExitDemo/
  SystemSetPropertyDemo/inner_class 3개/annotation/BisInDie/enum_ 5개)에
  원형 유지 사유 주석 추가
- AnonymousTester: 함수형 인터페이스 구현 케이스만 람다로 (추상/구체 클래스
  상속 케이스는 람다 불가라 그대로 둠)
- for_each/Array.java 삭제 (Stream API로 완전 대체), ForEachDemo를
  Stream/List#replaceAll/List#reversed()(Java21)로 재작성
- void_/AvoidNullCheck, void_/NullProof: Optional.ofNullable().orElse() 적용,
  NullProof는 java.sql.Date → LocalDate로도 교체
- until_not_void/UntilNotVoid: instanceof 사슬 → 패턴 매칭 switch(JEP 441)
- until_not_void/UntilNotVoidDemo: 이미 불필요하다고 자체 증명된 중복
  캐스팅 블록 삭제
- is_in/IsIn: Integer 참조 비교 버그, CSV 부분일치 버그 수정 (Set.of + equals)
- CloneTester: Cloneable/clone() → 복사 생성자 (Effective Java Item 13)
- ReflectField: 원시타입 분기를 switch expression으로, RecordComponent
  데모 추가 (필드 값을 바꾸는 데모라 record 자체로는 전환 불가)
- annotation/Target.java → AnnotationTarget.java 이름 변경 (java.lang.annotation.Target
  과 충돌 소지), 같은 이유로 record 미적용
- 전 파일 legacy 대비 실행 대조 완료 (A분류 12개 완전 일치, B분류 대부분
  일치, 의도된 차이는 커밋 메시지 사유 명시)
- DECISIONS.md D14~D18, PLAN.md/README.md 진행 상황 갱신

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RkQM5zc6GY6S2bMhHwTNy4